# qevm

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: demo.rs  factorial.sol  hello-world.rs  hello-world.sol  playback.rs
resources/test/basic/: add11Filler.json
resources/test/stMemoryTest/: sha3_dejavuFiller.json  stackLimitGas_1023Filler.json  stackLimitGas_1024Filler.json  stackLimitGas_1025Filler.json  stackLimitPush31_1023Filler.json  stackLimitPush31_1024Filler.json  stackLimitPush31_1025Filler.json  stackLimitPush32_1023Filler.json  stackLimitPush32_1024Filler.json  stackLimitPush32_1025Filler.json
resources/test/stSStoreTest/: SstoreCallToSelfSubRefundBelowZeroFiller.json
resources/test/stShift/: sar_2^256-1_256Filler.json
resources/test/stTransitionTest/: createNameRegistratorPerTxsAfterFiller.json  createNameRegistratorPerTxsAtFiller.json  createNameRegistratorPerTxsBeforeFiller.json
src/: chain.rs  common.rs  lib.rs  mempool.rs  processor.rs  rpc.rs  state.rs  tx.rs
src/core/: alu.rs  call.rs  exec.rs  memory.rs  mod.rs  opcode.rs  params.rs  stack.rs
tests/: state.rs  state_transition.rs  tx.rs
tools/: Cargo.toml
tools/src/: dummy.rs  lib.rs  merkle.rs
tools/tests/: merkle.rs
