[package]
name = "qevm"
version = "0.1.0"
edition = "2021"

[features]
default = []
tx = []
chain = []
rpc = ["actor", "actix-web", "actix-cors", "jsonrpc-v2", "serde_json", "chain"]
actor = ["actix", "actix-rt"]
all = ["tx", "rpc"]

[dependencies]
async-trait = "0.1.52"
bitvec = "1.0.0"
futures = "0.3.21"
log = "0.4.14"
num-derive = "0.3.3"
num-traits = "0.2.14"
once_cell = "1.9.0"
primitive-types = "0.12.1"
rlp = "0.5.1"
rlp-derive = "0.1.0"
sha3 = "0.10.0"
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
libsecp256k1 = "0.7.0"
replace_with = "0.1.7"

actix = { version = "0.13.0", optional = true }
actix-web = { version = "4.0.1", optional = true }
actix-rt = { version = "2.7.0", optional = true }
actix-cors = { version = "0.6.1", optional = true }
jsonrpc-v2 = { version = "0.11.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dependencies.parking_lot]
version = "0.12.1"
features = ["send_guard"]

[dev-dependencies]
env_logger = "0.10.0"
serde_json = "1.0"
rand = "0.8.5"
tokio = { version = "1.18.2", features = ["rt", "macros"] }
async-recursion = "1.0.0"
rocksdb = "0.21.0"

[dev-dependencies.qevm-tools]
path = "tools/"

[[example]]
name = "demo"
required-features = ["rpc", "tx"]

[[example]]
name = "hello-world"
required-features = ["actor"]

[[example]]
name = "playback"
required-features = ["actor"]
