[package]
name = "qevm-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
async-trait = "0.1.52"
log = "0.4.14"
num-traits = "0.2.14"
once_cell = "1.9.0"
sync-unsafe-cell = "0.1.0"
hex = "0.4.3"
trie-db = "0.23.1"
rocksdb = "0.18.0"
reference-trie = "0.25.0"
hash-db = "0.15.2"
parking_lot = "0.11.2"
memory-db = "0.29.0"

[dependencies.qevm]
path = "../"

[dev-dependencies]
rand = "0.8.5"
sha3 = "0.10.0"
actix-rt = "2.7.0"
